Discussion > fix overflow when long line

--- a/scss/components/pageGrey/_discussion.scss
+++ b/scss/components/pageGrey/_discussion.scss
@@ -3,6 +3,10 @@
   width: 100%;
   max-width: 870px;
 
+  @include media("<tablet") {
+    max-width: 95vw;
+  }
+
   img {
     max-height: 60vh;
     object-fit: cover;
@@ -16,6 +20,10 @@
     margin-bottom: 32px;
     font-size: 20px;
     line-height: 24px;
+
+    p {
+      overflow-wrap: break-word;
+    }
 
     @include media("<tablet") {
       font-size: 18px;
@@ -42,6 +50,7 @@
 
     @include media("<tablet") {
       padding-left: 24px;
+      margin-right: unset;
     }
   }
 }
